# binaryen-build

./: .gitignore  README.md
.github/workflows/: vendor.yml
macos-x86_64/: dune  libbinaryen.opam
